ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-staging
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - uat-ctp.ais-xnat.cloud.edu.au
    secretName: uat-ctp-ais-xnat-cloud-edu-au-tls
  rules:
  - host: uat-ctp.ais-xnat.cloud.edu.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ctp-httpsimport
            port:
              number: 7777
